# Function-Scope-Identifier-Using-LLVM-Clang-Preprocessor

./: CMakeLists.txt  LICENSE  README.md  big_test.cpp  dummy.c  test.c
include/: FunctionScopeAction.h  FunctionScopeConsumer.h  FunctionVisitor.h
src/: FunctionScopeAction.cpp  FunctionScopeConsumer.cpp  FunctionVisitor.cpp  main.cpp
